// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselStage when transition is next should match the snapshot 1`] = `
<div>
  <div
    class="flex flex-nowrap max-h-screen overflow-x-hidden sm:w-260"
  >
    <figure
      class="-translate-x-full duration-1000 flex flex-col invisible items-center max-h-screen min-w-full relative right-full sm:justify-center sm:px-2 transform transition w-full"
    >
      <img
        alt="An image identified as C and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image C"
        width="100"
      />
    </figure>
    <figure
      class="-translate-x-full duration-1000 flex flex-col items-center max-h-screen min-w-full opacity-0 relative right-full sm:justify-center sm:px-2 transform transition w-full"
    >
      <img
        alt="An image identified as A and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image A"
        width="100"
      />
    </figure>
    <figure
      class="-translate-x-full duration-1000 flex flex-col items-center max-h-screen min-w-full relative right-full sm:justify-center sm:px-2 transform transition w-full"
    >
      <img
        alt="An image identified as B and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image B"
        width="100"
      />
    </figure>
  </div>
</div>
`;

exports[`CarouselStage when transition is null should match the snapshot 1`] = `
<div>
  <div
    class="flex flex-nowrap max-h-screen overflow-x-hidden sm:w-260"
  >
    <figure
      class="flex flex-col invisible items-center max-h-screen min-w-full opacity-0 relative right-full sm:justify-center sm:px-2 w-full"
    >
      <img
        alt="An image identified as C and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image C"
        width="100"
      />
    </figure>
    <figure
      class="flex flex-col items-center max-h-screen min-w-full relative right-full sm:justify-center sm:px-2 w-full"
    >
      <img
        alt="An image identified as A and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image A"
        width="100"
      />
    </figure>
    <figure
      class="flex flex-col invisible items-center max-h-screen min-w-full opacity-0 relative right-full sm:justify-center sm:px-2 w-full"
    >
      <img
        alt="An image identified as B and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image B"
        width="100"
      />
    </figure>
  </div>
</div>
`;

exports[`CarouselStage when transition is previous should match the snapshot 1`] = `
<div>
  <div
    class="flex flex-nowrap max-h-screen overflow-x-hidden sm:w-260"
  >
    <figure
      class="duration-1000 flex flex-col items-center max-h-screen min-w-full relative right-full sm:justify-center sm:px-2 transform transition translate-x-full w-full"
    >
      <img
        alt="An image identified as C and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fc.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image C"
        width="100"
      />
    </figure>
    <figure
      class="duration-1000 flex flex-col items-center max-h-screen min-w-full opacity-0 relative right-full sm:justify-center sm:px-2 transform transition translate-x-full w-full"
    >
      <img
        alt="An image identified as A and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fa.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image A"
        width="100"
      />
    </figure>
    <figure
      class="duration-1000 flex flex-col invisible items-center max-h-screen min-w-full relative right-full sm:justify-center sm:px-2 transform transition translate-x-full w-full"
    >
      <img
        alt="An image identified as B and used for testing."
        class="max-h-full max-w-full mx-auto my-auto object-contain w-auto"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Ffoo.com%2Fb.jpg&w=256&q=75 2x"
        style="color: transparent;"
        title="Image B"
        width="100"
      />
    </figure>
  </div>
</div>
`;
